# xiao-espc6-water-detector

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
common/: nvs.c  shell.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  water_sensor.c  water_sensor.h  wet_indicator.c  wet_indicator.h
pipelines/: json-to-lightdb.yml
